MCFE-428 Update to quad input to make it narrower. Fixed the space around the numbers so they don't get cut off.

--- a/src/styles/text-input.module.scss
+++ b/src/styles/text-input.module.scss
@@ -176,8 +176,8 @@ input {
     &[class*='has-arrow-'] [type='number'],
     &[class*='has-space-'] [type='text'],
     &[class*='has-space-'] [type='number'] {
-      padding-right: 20px;
-      padding-left: 20px;
+      padding-right: 12px;
+      padding-left: 12px;
       text-align: right;
     }
   }
